<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="more_action">More</string>
    <string name="title_home">Home</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Welcome to the Dark Theme code sample</string>
    <string name="save">Save</string>
    <string name="offline">Offline mode</string>
    <string name="your_name">Your name</string>
    <string name="developer">Developer</string>
    <string name="designer">Designer</string>
    <string name="preferences">Select your preferences</string>
    <string name="preferences_explanation">Disclaimer: This screen will only be dark when Dark Mode is forced in the OS settings in Android Q and above.</string>
    <string name="sort">Sort</string>
    <string name="component">Component</string>
    <string name="title_light">Light</string>
    <string name="title_dark">Dark</string>
    <string name="this_is_text_view">This is Text View</string>
    <string name="this_is_text_view_title">This is Title TextView</string>
    <string name="this_is_text_view_display">Display1 textView</string>
    <string name="this_is_text_view_display_2">Display 2 TextView</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="text_view">TextView</string>
    <string name="edit_text">EditText</string>
    <string name="edit_text_with_input_layout">EditText with InputLayout</string>
    <string name="radio_button_group">Radio Button Group</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_compat_spinner">AppCompat Spinner</string>
    <string name="edit_text_invalid_message">Text in between 3 to 6 characters.</string>
    <string name="button">Button</string>
    <string name="default_button">Default Button</string>
    <string name="button_stroke">Stroke Button</string>
    <string name="button_text">Text Button</string>
    <string name="button_disable">Disable Button</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="check_box_group">CheckBox</string>
    <string name="orange">Orange</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="txt_switch">Switch</string>
    <string name="home">HOME</string>
    <string name="chip1">Chip 1</string>
    <string name="chip2">Chip 2</string>
    <string name="chip3">Chip3</string>
    <string name="chip4">Chip 4</string>
    <string name="default_chip">Chip Action</string>
    <string name="seek_bar">SeekBar</string>
    <string name="chip">Chip</string>

</resources>
