<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/chip"
        app:textAllCaps="true" />

    <com.google.android.material.chip.Chip
        style="@style/MyChip.Action.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_chip"
        app:chipIcon="@drawable/ic_home" />

    <com.google.android.material.chip.Chip
        style="@style/MyChip.Entry.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_chip" />

    <com.google.android.material.chip.Chip
        style="@style/MyChip.Entry.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_chip"
        app:chipIcon="@drawable/ic_sun_full" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            style="@style/MyChip.Filter.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip21"
            style="@style/MyChip.Filter.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip31"
            style="@style/MyChip.Filter.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip41"
            style="@style/MyChip.Filter.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip4" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedChip="@+id/chip1"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/MyChip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/MyChip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/MyChip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/MyChip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip4" />

    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginBottom="@dimen/dp32"
        android:alpha="0.2"
        android:background="@color/textColorSecondary" />
</LinearLayout>