<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp16"
    android:gravity="center|top"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/button"
        app:textAllCaps="true" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_button" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_button"
        app:icon="@drawable/ic_home" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButton.Stroke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stroke" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButton.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButton.Disable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_disable" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        style="@style/MyButton.Toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        app:checkedButton="@+id/button2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/MyButton.Toggle.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/MyButton.Toggle.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/MyButton.Toggle.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_3" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton1"
        style="@style/MyButton.Toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        android:gravity="center"
        app:checkedButton="@+id/button21">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button11"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_left_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button21"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_center_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button31"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_right_24" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton13"
        style="@style/MyButton.Toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        android:gravity="center"
        app:checkedButton="@+id/button213"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button113"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_left_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button213"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_center_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button313"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_right_24" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton2"
        style="@style/MyButton.Toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8"
        android:gravity="center"
        app:checkedButton="@+id/button22">

        <com.example.android.darktheme.views.CustomMaterialToggleButton
            android:id="@+id/button12"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_left_24" />

        <com.example.android.darktheme.views.CustomMaterialToggleButton
            android:id="@+id/button22"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_center_24" />

        <com.example.android.darktheme.views.CustomMaterialToggleButton
            android:id="@+id/button32"
            style="@style/MyButton.Toggle.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_format_align_right_24" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginBottom="@dimen/dp32"
        android:alpha="0.2"
        android:background="@color/textColorSecondary" />
</LinearLayout>